--- a/simple.html
+++ b/simple.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<!--
+
+	Copyright 2021 Git Training
+
+-->
 <head>
 	<title>New Title</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
