--- a/simple.html
+++ b/simple.html
@@ -5,7 +5,7 @@
 
 -->
 <head>
-	<title>New Title</title>
+	<title>A Very Respectful Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -19,11 +19,11 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			I'm not sure what to say.
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; Paul Lucero 2014</p>
 	</footer>
 </body>
 </html>
