--- a/simple.html
+++ b/simple.html
@@ -6,7 +6,7 @@
 
 -->
 <head>
-	<title>Trouble indeed.</title>
+	<title>Log of trouble</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
