--- a/simple.html
+++ b/simple.html
@@ -2,11 +2,11 @@
 <!--
 
 	Copyright 2021 Git Training
-	adding changes before rebasing conflicts
+	now there's more trouble from master branch
 
 -->
 <head>
-	<title>A Very Respectful Website</title>
+	<title>Trouble indeed.</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -20,7 +20,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Some interesting stuff goes here.
+			OH NO!!!
 		</p>
 	</main>
 	<footer class="container">
