--- a/simple.html
+++ b/simple.html
@@ -24,7 +24,7 @@
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Git Training 2014</p>
+		<p>&copy; Git Training 2014, just adding something for clout</p>
 	</footer>
 </body>
 </html>
