--- a/simple.html
+++ b/simple.html
@@ -6,7 +6,7 @@
 
 -->
 <head>
-	<title>Lot of trouble, damn!</title>
+	<title>Updating title for stash example</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -20,7 +20,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			OH NO!!!
+			Adding more content here.
 		</p>
 	</main>
 	<footer class="container">
